fixed truncation

--- a/src/features/ShoppingList/ShoppingList.scss
+++ b/src/features/ShoppingList/ShoppingList.scss
@@ -46,6 +46,11 @@ h1 {
   h3 {
     margin-bottom: 0;
   }
+  .item-quantity {
+    p {
+      margin-bottom: 4px;
+    }
+  }
   .Polaris-Card {
     border: none;
     box-shadow: none;
